--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "npx json-server ./src/db/help.json --port 5000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
